Update RaffleService.java